recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:5: error: not found: value step
  current(step)
          ^Tree:9: error: not found: value step
  current(step)
          ^