recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps ==0){
    return
  }
  current(step)
  avance(length)
  droite(angle)
  tree(steps-1, shrink*length, angle, shrink)
  current(step)
  droite(angle*2)
}